<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>0.3.1</version>
        <relativePath />
    </parent>
    <groupId>de.cuioss.test</groupId>
    <artifactId>cui-test-juli-logger</artifactId>
    <name>cui test juli logger</name>
    <version>1.2.0-SNAPSHOT</version>
    <description>Provides some classes simplifying the configuration and
        asserting of logging in the context of unit-tests
    </description>
    <packaging>jar</packaging>
    <url>https://github.com/cuioss/cui-test-juli-logger/</url>
    <scm>
        <url>https://github.com/cuioss/cui-test-juli-logger/</url>
        <connection>scm:git:https://github.com/cuioss/cui-test-juli-logger.git</connection>
        <developerConnection>
            scm:git:https://github.com/cuioss/cui-test-juli-logger/</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-test-juli-logger/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <properties>
        <maven.jar.plugin.automatic.module.name>de.cuioss.test.juli</maven.jar.plugin.automatic.module.name>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <version.cui.java.tools>2.0-SNAPSHOT</version.cui.java.tools>
        <maven-javadoc-plugin.source>17</maven-javadoc-plugin.source>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.cuioss</groupId>
            <artifactId>cui-java-tools</artifactId>
        </dependency>
        <!-- Unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
        </dependency>
    </dependencies>
</project>